--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="login">
     <div class="loginbox">
-        <img src="file:///Users/adoo/Desktop/Twilio-project/css/avatar.png" class="avatar">
+        <img src="css/avatar.png" class="avatar">
         <h1>Login Here</h1>
         <form>
             <p>Username</p>
