--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
         Login Form
     </title>
-    <link href="file:///Users/adoo/Desktop/Twilio-project/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="login">
