--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Main Page</title>
-    <link href="file:///Users/adoo/Desktop/Twilio-project/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="mainPg">
