Update and rename Twilio-project/pay.html to pay.html

--- a/pay.html
+++ b/pay.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>Payment log</title>
-    <link href="file:///Users/adoo/Desktop/Twilio-project/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="pay">
@@ -12,7 +12,7 @@
         <a href="#payinfo">Payment info</a>
         <a href="#Clog">Your call log</a>
         <a href="#about">About</a>
-        <a id="acc_info" href="file:///Users/adoo/Desktop/Twilio-project/account.html"> Account info </a>
+        <a id="acc_info" href="info.html"> Account info </a>
     </div>
     <div class="plan">
         <h2>Your current payment plan</h2>
