Update and rename Twilio-project/info.html to info.html

--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Main Page</title>
-    <link href="file:///Users/adoo/Desktop/Twilio-project/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="mainPg">
@@ -11,7 +11,7 @@
         <a href="#payinfo">Payment info</a>
         <a href="#Clog">Your call log</a>
         <a href="#about">About</a>
-        <a id="acc_info" href="file:///Users/adoo/Desktop/Twilio-project/account.html"> Account info </a>
+        <a id="acc_info" href="account.html"> Account info </a>
     </div>
     <div id="home">
         <h1>
@@ -31,7 +31,7 @@
         <h5>June:</h5>
         <h5>May:</h5>
         <h5>April:</h5>
-        <a href="/Users/adoo/Desktop/Twilio-project/pay.html">Click here to view all payment details</a>
+        <a href="pay.html">Click here to view all payment details</a>
 
     </div>
     <div id="Clog">
