--- a/Twilio-project/index.html
+++ b/Twilio-project/index.html
@@ -4,12 +4,12 @@
     <title>
         Login Form
     </title>
-    <link href="Twilio-project/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body class="login">
     <div class="loginbox">
-        <img src="Twilio-project/css/avatar.png" class="avatar">
+        <img src="css/avatar.png" class="avatar">
         <h1>Login Here</h1>
         <form>
             <p>Username</p>
