--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#payinfo">Payment info</a>
-        <a href="#Clog">Your call log</a>
+        <a href="index2.html">Your call log</a>
         <a href="#about">About</a>
         <a id="acc_info" href="account.html"> Account info </a>
     </div>
